--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -83,7 +83,7 @@
     },
     "permissions": {
       "title": "Требуются разрешения",
-      "description": "Handy требуются некоторые разрешения для корректной работы.",
+      "description": "Jotline требуются некоторые разрешения для корректной работы.",
       "microphone": {
         "title": "Доступ к микрофону",
         "description": "Необходим для прослушивания вашего голоса для транскрипции."
@@ -157,7 +157,7 @@
     "general": {
       "title": "Общие",
       "shortcut": {
-        "title": "Ярлыки Handy",
+        "title": "Ярлыки Jotline",
         "description": "Настройте сочетания клавиш для запуска записи речи в текст",
         "loading": "Загрузка ярлыков...",
         "none": "Ярлыки не настроены",
@@ -238,11 +238,11 @@
       },
       "autostart": {
         "label": "Запуск при запуске",
-        "description": "Автоматически запускать Handy при входе в систему."
+        "description": "Автоматически запускать Jotline при входе в систему."
       },
       "showTrayIcon": {
         "label": "Показать значок в трее",
-        "description": "Отображать значок Handy в системном трее."
+        "description": "Отображать значок Jotline в системном трее."
       },
       "overlay": {
         "title": "Позиция наложения",
@@ -400,7 +400,7 @@
       },
       "updateChecks": {
         "label": "Проверьте наличие обновлений",
-        "description": "Автоматически проверять наличие новых версий Handy"
+        "description": "Автоматически проверять наличие новых версий Jotline"
       },
       "soundTheme": {
         "label": "Звуковая тема",
@@ -464,11 +464,11 @@
       "title": "О программе",
       "version": {
         "title": "Версия",
-        "description": "Текущая версия Handy"
+        "description": "Текущая версия Jotline"
       },
       "appDataDirectory": {
         "title": "Каталог данных приложения",
-        "description": "Место, где Handy хранит свои данные"
+        "description": "Место, где Jotline хранит свои данные"
       },
       "sourceCode": {
         "title": "Исходный код",
@@ -477,15 +477,20 @@
       },
       "supportDevelopment": {
         "title": "Поддержка развития",
-        "description": "Помогите нам продолжить создание Handy",
+        "description": "Помогите нам продолжить создание Jotline",
         "button": "Пожертвовать"
       },
       "acknowledgments": {
         "title": "Благодарности",
+        "handy": {
+          "title": "Handy",
+          "description": "Бесплатное, открытое и расширяемое приложение для преобразования речи в текст, работающее полностью офлайн",
+          "details": "Jotline является форком Handy от cjpais. Спасибо за создание фундамента, который сделал этот проект возможным."
+        },
         "whisper": {
           "title": "Whisper.cpp",
           "description": "Высокопроизводительный вывод модели автоматического распознавания речи OpenAI Whisper",
-          "details": "Handy использует Whisper.cpp для быстрой локальной обработки речи в текст. Спасибо великолепной работе Георгия Герганова и его участников."
+          "details": "Jotline использует Whisper.cpp для быстрой локальной обработки речи в текст. Спасибо великолепной работе Георгия Герганова и его участников."
         }
       }
     }
@@ -528,7 +533,7 @@
   },
   "accessibility": {
     "permissionsRequired": "Требуются разрешения на доступ",
-    "permissionsDescription": "Handy необходимы разрешения на доступ для ввода расшифрованного текста.",
+    "permissionsDescription": "Jotline необходимы разрешения на доступ для ввода расшифрованного текста.",
     "openSettings": "Открыть настройки системы",
     "dismiss": "Увольнять"
   },
@@ -537,7 +542,7 @@
   },
   "appLanguage": {
     "title": "Язык приложения",
-    "description": "Изменить языка интерфейса Handy"
+    "description": "Изменить языка интерфейса Jotline"
   },
   "overlay": {
     "transcribing": "Расшифровка...",
